<resources>
    <string name="app_name">Almacenamiento</string>
    <string name="btn_Shared">SharedPreference</string>
    <string name="btn_Agenda">Agenda</string>
    <string name="btn_bloc">Block de Notas</string>
    <string name="btn_nombre">Ingrese Nombre</string>
    <string name="et_mail">Ingrese un Email</string>
    <string name="btn_ingresar">guardado</string>
    <string name="txt_nombre">Ingrese Nombre</string>
    <string name="txt_apellido">Ingrese Apellido</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_buscar">Buscar</string>
    <string name="btn_guardarNotas">Guardar</string>
    <string name="hint">Ingrese un Texto Aqui</string>
    <string name="et_nombre">Ingrese Tu Nombre</string>
    <string name="btn_siguiente">continuar</string>
    <string name="et_nombre2">Bienvenido</string>
    <string name="btn_enviar">Enviar</string>
    <string name="btn_calificar">Calificar</string>




</resources>