<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="236dp"
        android:layout_height="0dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="75dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_Shared"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ust" />

    <Button
        android:id="@+id/btn_Shared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="15dp"
        android:onClick="SharedPreference"
        android:text="@string/btn_Shared"
        app:layout_constraintBottom_toTopOf="@+id/btn_Agenda"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btn_Agenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="20dp"
        android:onClick="Agenda"
        android:text="@string/btn_Agenda"
        app:layout_constraintBottom_toTopOf="@+id/btn_bloc"
        app:layout_constraintEnd_toEndOf="@+id/btn_Shared"
        app:layout_constraintTop_toBottomOf="@+id/btn_Shared" />

    <Button
        android:id="@+id/btn_bloc"
        android:layout_width="212dp"
        android:layout_height="53dp"
        android:layout_marginBottom="26dp"
        android:text="@string/btn_bloc"
        android:onClick="notas"
        app:layout_constraintBottom_toTopOf="@+id/btn_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Agenda" />

    <Button
        android:id="@+id/btn_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="94dp"
        android:onClick="Nombre"
        android:text="@string/btn_nombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_bloc"
        app:layout_constraintTop_toBottomOf="@+id/btn_bloc" />
</androidx.constraintlayout.widget.ConstraintLayout>