<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".agenda">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="207dp"
        android:layout_height="0dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="77dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ust" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="340dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="242dp"
        android:layout_marginBottom="174dp"
        android:ems="10"
        android:hint="@string/txt_nombre"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btn_guardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="204dp"
        android:onClick="GuardarDatos"
        android:text="@string/btn_guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_buscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />

    <Button
        android:id="@+id/btn_buscar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="204dp"
        android:onClick="Buscar"
        android:text="@string/btn_buscar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_guardar"
        app:layout_constraintTop_toBottomOf="@+id/txt_apellido" />

    <EditText
        android:id="@+id/txt_apellido"
        android:layout_width="344dp"
        android:layout_height="69dp"
        android:layout_marginBottom="108dp"
        android:ems="10"
        android:hint="@string/txt_apellido"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btn_buscar"
        app:layout_constraintEnd_toEndOf="@+id/txt_nombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_nombre"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />

</androidx.constraintlayout.widget.ConstraintLayout>